docs: outline async thumbnail processing, UI enhancements, and ML pipeline upgrades while updating project documentation and gitignore.